@@ -1,5 +1,9 @@
 Changes with Apache 2.0.25-dev
 
+  *) Changed the late-1.3 log_config substitution %c to %X, to log the
+     status of the closed connection, as it conflicts with the far more
+     common, historical ssl logging directive %...{var}c.  [William Rowe]
+
   *) Added the common error/ tree to the build/install targets 
      (similar to the common icons/ tree) for the multi-language error 
      messages that Lars committed earlier.  [William Rowe]
